--- a/app/src/main/res/layout/activity_edit_data.xml
+++ b/app/src/main/res/layout/activity_edit_data.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back"
     tools:context=".EditDataActivity"
-    android:background="@drawable/rounded_main1">
+    >
 
     <EditText
         android:id="@+id/EditNAME"
@@ -14,8 +15,10 @@
         android:background="@drawable/rounded_edittext"
         android:ems="10"
         android:hint="Title"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:inputType="textPersonName"
-        android:minHeight="40dp"
+        android:minHeight="50dp"
         android:textAlignment="center"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,11 +32,13 @@
     <EditText
         android:id="@+id/editUSERNAME"
         android:background="@drawable/rounded_edittext"
-        android:minHeight="40dp"
+        android:minHeight="50dp"
         android:layout_width="0dp"
         android:textAlignment="center"
         android:gravity="center"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
@@ -46,8 +51,10 @@
 
     <EditText
         android:id="@+id/editPASS"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:background="@drawable/rounded_edittext"
-        android:minHeight="40dp"
+        android:minHeight="50dp"
         android:layout_width="0dp"
         android:textAlignment="center"
         android:gravity="center"
@@ -64,8 +71,10 @@
 
     <EditText
         android:id="@+id/editSecPASS"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:background="@drawable/rounded_edittext"
-        android:minHeight="40dp"
+        android:minHeight="50dp"
         android:textAlignment="center"
         android:gravity="center"
         android:layout_width="0dp"
@@ -82,8 +91,10 @@
 
     <EditText
         android:id="@+id/editTnxPASS"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:background="@drawable/rounded_edittext"
-        android:minHeight="40dp"
+        android:minHeight="50dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textAlignment="center"
@@ -100,8 +111,13 @@
 
     <Button
         android:id="@+id/DELETE"
+        android:background="@drawable/btn_bg_w"
+        app:backgroundTint="#00FFFFFF"
+        app:backgroundTintMode="screen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textSize="15dp"
         android:text="DELETE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,9 +128,15 @@
 
     <Button
         android:id="@+id/SAVE"
+        android:background="@drawable/btn_bg_w"
+        app:backgroundTint="#00FFFFFF"
+        app:backgroundTintMode="screen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:text="SAVE"
+        android:textSize="15dp"
+        android:minWidth="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.244"
