--- a/app/src/main/res/drawable/btn_bg_w.xml
+++ b/app/src/main/res/drawable/btn_bg_w.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="100dp">
-
-    <solid android:color="#803F51B5" />
+<gradient
+    android:startColor="#000"
+    android:endColor="#721e9c"
+    ></gradient>
 
     <corners
-        android:bottomRightRadius="15dp"
         android:bottomLeftRadius="15dp"
+        android:bottomRightRadius="15dp"
         android:topLeftRadius="15dp"
-        android:topRightRadius="15dp" />
-    <stroke android:width="3dp" android:color="#88E91E63"/>
+        android:topRightRadius="15dp"></corners>
+    <stroke android:width="3dp" android:color="#fff"/>
 </shape>
