--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -2,12 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="100dp">
 
-    <solid android:color="#77E6ADEA" />
+   <gradient
+       android:endColor="#28407a"
+       android:startColor="#7a283d"></gradient>
 
     <corners
         android:bottomRightRadius="15dp"
         android:bottomLeftRadius="15dp"
         android:topLeftRadius="15dp"
         android:topRightRadius="15dp" />
-    <stroke android:width="3dp" android:color="#81405ABA"/>
+    <stroke android:width="3dp" android:color="#fff"/>
 </shape>
