--- a/app/src/main/res/layout/activity_afterlogin.xml
+++ b/app/src/main/res/layout/activity_afterlogin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/rounded_edittext"
+    android:background="@drawable/back"
     tools:context=".afterlogin">
 
     <Button
@@ -12,8 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:background="@color/black"
-        android:backgroundTint="#803F51B5"
+        android:background="@drawable/btn_bg_w"
+        app:backgroundTint="#00FFFFFF"
+        app:backgroundTintMode="screen"
+        android:textSize="20dp"
+        android:textColor="@color/white"
         android:minWidth="180dp"
         android:minHeight="100dp"
         android:onClick="addData"
@@ -29,8 +32,11 @@
         android:id="@+id/viewdata"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/black"
-        android:backgroundTint="#803F51B5"
+        android:background="@drawable/btn_bg_w"
+        app:backgroundTint="#00FFFFFF"
+        app:backgroundTintMode="screen"
+        android:textColor="@color/white"
+        android:textSize="20dp"
         android:minWidth="180dp"
         android:minHeight="100dp"
         android:onClick="viewData"
