--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/rounded_edittext"
+    android:background="@drawable/back"
     tools:context=".Main">
 
 
@@ -16,6 +16,7 @@
         android:background="@drawable/rounded_edittext"
         android:ems="10"
         android:hint="PASSWORD"
+        android:textColorHint="@color/white"
         android:inputType="numberPassword"
         android:minWidth="100dp"
         android:minHeight="60dp"
@@ -27,37 +28,40 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.499"/>
 
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#018786"
-        android:minWidth="90dp"
+        android:background="@drawable/btn_bg_w"
+        android:backgroundTint="@color/design_default_color_background"
+        android:minWidth="150dp"
         android:minHeight="50dp"
         android:onClick="onbClick"
         android:text="LOGIN"
+        android:textColor="#fff"
+        android:textFontWeight="@integer/config_navAnimTime"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:textFontWeight="@integer/config_navAnimTime"
-        android:textColor="#000000"
+        app:backgroundTint="#00FFFFFF"
+        app:backgroundTintMode="screen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Password"
-        app:layout_constraintVertical_bias="0.227"
-        />
-
+        app:layout_constraintVertical_bias="0.192" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
-        android:layout_height="212dp"
+        android:layout_height="250dp"
         android:src="@drawable/lock"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toEndOf="@+id/Password"
         app:layout_constraintStart_toStartOf="@+id/Password"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.086" />
+        app:layout_constraintVertical_bias="0.086"
+        android:background="@drawable/imgback"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
