--- a/app/src/main/res/layout/activity_middle.xml
+++ b/app/src/main/res/layout/activity_middle.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".middle"
-    android:background="@drawable/rounded_edittext">
+    android:background="@drawable/back">
 
 
   <EditText
@@ -15,7 +15,8 @@
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="15dp"
-      android:background="@drawable/rounded_main1"
+      android:background="@drawable/rounded_edittext"
+      android:textColorHint="@color/white"
       android:ems="10"
       android:hint="User ID"
       android:inputType="textPersonName"
@@ -32,7 +33,8 @@
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="108dp"
-      android:background="@drawable/rounded_main1"
+      android:background="@drawable/rounded_edittext"
+      android:textColorHint="@color/white"
       android:ems="10"
       android:hint="Title"
       android:inputType="textPersonName"
@@ -48,8 +50,9 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
+      android:background="@drawable/rounded_edittext"
+      android:textColorHint="@color/white"
       android:layout_marginTop="15dp"
-      android:background="@drawable/rounded_main1"
       android:ems="10"
       android:hint="Password"
       android:inputType="textPersonName"
@@ -66,7 +69,8 @@
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="15dp"
-      android:background="@drawable/rounded_main1"
+      android:background="@drawable/rounded_edittext"
+      android:textColorHint="@color/white"
       android:ems="10"
       android:hint="Security Password"
       android:inputType="textPersonName"
@@ -83,9 +87,10 @@
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="15dp"
-      android:background="@drawable/rounded_main1"
       android:ems="10"
       android:hint="Transaction Password"
+      android:background="@drawable/rounded_edittext"
+      android:textColorHint="@color/white"
       android:inputType="textPersonName"
       android:minHeight="48dp"
       android:textAlignment="center"
@@ -99,9 +104,13 @@
       android:layout_width="130dp"
       android:layout_height="54dp"
       android:layout_marginTop="15dp"
-      android:backgroundTint="#86E91E63"
       android:fontFamily="sans-serif-black"
+      android:background="@drawable/btn_bg_w"
+      app:backgroundTint="#00FFFFFF"
+      app:backgroundTintMode="screen"
       android:text=" Add Data"
+      android:textColor="@color/white"
+      android:textSize="16dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.498"
