--- a/app/src/main/res/layout/activity_view_data.xml
+++ b/app/src/main/res/layout/activity_view_data.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".viewData"
-    android:background="@drawable/rounded_edittext">
+    android:background="@drawable/btn">
 
 
 
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listview"
-        android:soundEffectsEnabled="true"></ListView>
+        android:soundEffectsEnabled="true"
+        ></ListView>
 
 </LinearLayout>
