--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -54,7 +54,7 @@
         android:id="@+id/imageView"
         android:layout_width="384dp"
         android:layout_height="316dp"
-        android:src="@drawable/Logo"
+        android:src="@drawable/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toEndOf="@+id/Password"
